--- a/app/assets/stylesheets/landing-page/service-cards.scss
+++ b/app/assets/stylesheets/landing-page/service-cards.scss
@@ -40,6 +40,7 @@
       flex: 1 0 30%;
       max-width: 30%;
       position: relative;
+      margin-bottom: 0px;
       &__body {
         margin: 0 0 2rem 0;
         padding: 0 0 2rem 0;
